--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
 restarttime = 01:00
-voicechannel = 
+voicechannel = 514089528265408514
 textchannel = 514089527724474374
 
 before_alert = 1
